		(Michael Legart)
	- Make GallerySortBy work for directories (Michael Legart)
	- Make GalleryDirSortBy override GallerySortBy for directories
	  (Andreas Plesner)
	- Report 404 for HEAD requests to non-existing files or directories
	  (Michael Legart)
	- Scale images when they are requested from the cache instead of
	  before the index is displayed. (Michael Legart)

0.8 Sun Mar  7 11:22:00 CET 2004

	- Remember choosen width by setting a cookie (Rene Joergensen)
	- Fixed a bug where $EXIFVALUES was left blank if a picture
	  had a comment. (Michael Legart)
	- Fixed a bug where one line comments was showed as $COMMENT
	  (Jesper Skriver)
	- Fixed a bug where comments did not get shown when using
	  the variables exif mode (Thomas L. Kjeldsen)
	- Added two new configuration options GalleryDocFile and
	  GalleryImgFile that makes it possible to configured which
	  filetypes should be displayed. See the documentation for
	  details. (Guillaume Rousse)
	- Added new option GalleryThumbnailSizeLS. If set to 1,
	  GalleryThumbnailSize is the long and the short side
	  of the thumbnail image instead of the width and height.
	  (Don Armstrong)
	- Switched to use Text::Template instead of CGI::FastTemplate,
	  see the UPGRADE file for details. (Don Armstrong)
	- Create copyright notices on pictures using truetype fonts
    instead of png images. Font, color and size can be configured
    (Thomas Petersen, Michael Legart)

0.7 Mon Sep  8 22:30:35 CEST 2003

	- Support mod_perl version 1 and 2 (1.99) (Michael Legart)	
	- Send status code 500 on errors, 404 on file not found and
	  make IE show our own errorpage. (Thomas L. Kjeldsen)
	- Bugfix for directories named "0" (Andreas Plesner Jacobsen)
	- Added "selection mode". Select images with checkboxes and
	  get a list of filenames. (Peter Andreasen)
	- Fix to let the module work with perl 5.005 (Aaron)
	- Do not allow scaling pictures to sizes above their
	  original size (Aaron)